# OtusTutorial10

./: .travis.yml  CMakeLists.txt  threads_hw10.pro
src/: blockoutput.cpp  blockoutput.h  consoleoutput.cpp  consoleoutput.h  dynamicblock.h.autosave  filedynamic.cpp  filedynamic.h  filestatic.cpp  filestatic.h  machine.cpp.autosave  main.cpp  model.cpp  model.h  output.h  outputcout.h.autosave  staticblock.cpp.autosave  staticblock.h.autosave  utils.cpp  utils.h
